--- a/CVS_project/src/main/webapp/resources/css/posPayment.css
+++ b/CVS_project/src/main/webapp/resources/css/posPayment.css
@@ -2,27 +2,69 @@
 
 .middle{
 	border: solid 1px black; 
-	width: 800px;
-	height: 200px;
+	width: 100%;
+	height: 30%;
 	position:relative;
 }
+.bottom{
+	height: 50%;
+}
 .mdlist{	
-	margin-right : 0px;
+	height : 50%;
 	float: left; 
 	display: inline-block;
 	
 }
 .listbutton{
-	float: right;	
+	float: left;	
+		padding-top: 20px;
+		padding-right: 20px;
+
 }
 
 
-.listtable {
-    width: 100%;
-    table-layout: fixed;
-    border-spacing: 0;
-    border-collapse: collapse;
+.listtable {	
+	border-collapse: collapse;
+	text-align: left;
+	line-height: 1.5;
+	border: 1px solid #ccc;
+	margin: 20px 10px;
+	width: 90%;
+	float: left;
 }
+.listtable thead{
+	border-right: 1px solid #ccc;
+	border-left: 1px solid #ccc;
+	background: #E0F2F7;
+}
+.listtable thead tr td{
+	padding: 10px;
+	font-weight: bold;
+	vertical-align: top;
+	color: #084B8A;
+	text-align : center;
+
+}
+.listtable tbody tr td {
+	padding: 10px;
+	font-weight: bold;
+	vertical-align: top;
+	border-bottom: 1px solid #ccc;
+	text-align : center;
+	
+}
+.listtable td {
+	
+	padding: 10px;
+	vertical-align: top;
+	border-bottom: 1px solid #ccc;
+}
+.input{
+	padding-top: 24%;
+}
+
+
+
 
 .listbutton{
 	float: right;
@@ -35,20 +77,71 @@
 
 .bottom{
 		border: solid 1px black; 
-	width: 800px;
-	height: 200px;
 }
 
 .functionkey{
+	text-align : center;
+	
 	float: left;
 	padding-right: 30px;
+	font-size : 20px;
+	margin-left: 100px;
+	margin-right: 100px;
+		
+}
+
+.functiontable{
+	width : 400px;	
+	height: 80px;
+
+}
+.functiontable tr td{
+	height: 80px;
+
 }
 
 .printprice{
+		text-align : center;
+	
 	float: left;
 	padding-right: 30px;
+	font-size : 20px;
+	
 }
-.numbotton{
-	float: right;
+.prnum{
+		text-align : right;
+		padding-right: 20px;
+}
+.printprice table{
+	width: 400px;
 }
 
+.printprice tr td{
+	
+	height: 80px;
+	
+}
+
+
+
+
+
+.numbotton{
+	margin-right : 100px;
+	float: right;
+}
+.numkey{
+	text-align : center;
+	font-size : 15px;
+	width: 400px;
+	height: 200px;
+	padding-right: 20px;
+}
+.numkey tr td{
+	width: 25%;
+	height: 68px;
+}
+.num{
+	
+	font-size: 30px;
+}
