--- a/CVS_project/src/main/webapp/resources/css/posPaymentList.css
+++ b/CVS_project/src/main/webapp/resources/css/posPaymentList.css
@@ -1,30 +1,83 @@
 @charset "UTF-8";
 
-
+header{
+	height: 20px;
+}
 .totaltable{
+	margin-top: 20px; 
 	border: solid 1px black; 
-	width: 1000px;
-	height: 600px;
+	width: 100%;
+	height: 100%;
 }
 
 .mainlisttable{
-	width: 400px;
-	height: 500px;	
+	width: 45%;
+	height: 50%;	
 	float: left;
 	padding-right: 30px;
+	margin-top : 20px;
+	margin-right: 10%;
+	margin-left: 5%;
+	font-weight: bold;
+	vertical-align: top;
+	border-collapse: collapse;
+	text-align: center;
+	line-height: 1.5;
+	border: 1px solid #ccc;
+	
+	
+}
+.mainlisttable tr th{
+	background: #E0F2F7;
+	color: #084B8A;
+	border-right: 1px solid #ccc;
+	border-left: 1px solid #ccc;
+	background: #E0F2F7;
+	height: 50px;
+	
+}
+.mainlisttable tr td{
+	height: 50px;
 }
 
 .detaillisttable{
 	
-	width: 400px;
-	height: 500px;
+	width: 35%;
+	height: 50%;
 	float: left;
 	padding-right: 30px;
+	margin-right: 5%;
+	margin-left: 5%;
+	font-weight: bold;
+	vertical-align: top;
+	border-collapse: collapse;
+	text-align: center;
+	line-height: 1.5;
+	border: 1px solid #ccc;
+	margin: 20px 10px;
+}
+.detaillisttable tr th{
+	background: #E0F2F7;
+	color: #084B8A;
+	border-right: 1px solid #ccc;
+	border-left: 1px solid #ccc;
+	background: #E0F2F7;
+	height: 50px;
+	
+	
+}
+.detaillisttable tr td{
+	height: 50px;
+	
+
 }
 .datepicker{
 	float: left;
+	margin-left: 10px;
 	
 }
-.pospage{
-	
+
+.topbutton{
+	float: right;
+	margin-right: 10px;
 }
