묶음행사중

--- a/CVS_project/src/main/webapp/resources/css/posPayment.css
+++ b/CVS_project/src/main/webapp/resources/css/posPayment.css
@@ -28,7 +28,7 @@
 	text-align: left;
 	line-height: 1.5;
 	border: 1px solid #ccc;
-	margin: 20px 10px;
+	margin: 20px 10px 0px 70px;
 	width: 90%;
 	float: left;
 }
